--- a/README
+++ b/README
@@ -2,4 +2,6 @@ A quick talk wrangled together for chatting through the reader, writer and state
 
 This talk was written for the Brisbane Functional Programming Group 2013-04-23.
 
-Important to talk about the isolation, control and ability to reason about our code that we get from this.
+Best to run these examples in sbt.
+
+Run sbt console and go Start.main( "test.xml" ) to run the first version.
